--- a/client/index.html
+++ b/client/index.html
@@ -4,27 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <meta name="msapplication-TileColor" content="#1f3f6d">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="min 140 length desc" />
-  <meta property="og:description" content="desc" />
 
-  <meta property="og:title" content="Reint">
+  <meta name="description"
+    content="Embark on seamless travels with Reint Car Rentals. From business trips to weekend getaways, our reliable vehicles and top-notch service ensure a smooth ride every time. Book now and experience the ultimate in convenience and comfort." />
 
+  <meta property="og:description"
+    content="Embark on seamless travels with Reint Car Rentals. From business trips to weekend getaways, our reliable vehicles and top-notch service ensure a smooth ride every time. Book now and experience the ultimate in convenience and comfort." />
+
+
+  <meta property="og:title" content="Reint Car Rent">
   <meta property="og:type" content="website">
-  <meta property="og:product:category" content="vehicle">
-  <meta property="og:product:availability" content="instock">
-  <meta property="og:product:condition" content="new">
-
   <meta property="og:image" content="https://i.ibb.co/1szPLMz/logo-1.jpg">
-  <meta property="og:url" content="https://barisolgun.com/">
-  <link rel='canonical' href='https://barisolgun.com/' />
+  <meta property="og:url" content="https://barisolgun-car-rent.netlify.app">
+  <link rel='canonical' href='https://barisolgun-car-rent.netlify.app' />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
 
   <title>Reint</title>
 
