--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
   <meta property="og:title" content="Reint Car Rent">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://i.ibb.co/1szPLMz/logo-1.jpg">
+  <meta property="og:image" content="https://i.ibb.co/YB21yxL/1.jpg">
   <meta property="og:url" content="https://barisolgun-car-rent.netlify.app">
   <link rel='canonical' href='https://barisolgun-car-rent.netlify.app' />
 
